try fixing vertical navbar collapse

--- a/css/navbarStyle.css
+++ b/css/navbarStyle.css
@@ -95,7 +95,7 @@
     margin: 10px;
 }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
     body {
         padding: 106px 0px 0px 0px;
     }
